<resources>
    <string name="app_name">Zeiterfassung</string>
    <string name="LabelStartTime">Startzeit:</string>
    <string name="LabelEndTime">Endzeit:</string>
    <string name="ButtonStart">Starten</string>
    <string name="ButtonEnd">Beenden</string>
    <string name="MenuListData">Auflistung</string>
    <string name="ColumnHeaderStartTime">Startzeit</string>
    <string name="ColumnHeaderEndTime">Endzeit</string>
    <string name="TimeDataActivityTitle">Auflistung</string>
    <string name="MenuItemDelete">Löschen</string>
    <string name="MoreIcon" translatable="false">" ⋮ "</string>
    <string name="DialogTitleDeleteItem">Eintrag löschen</string>
    <string name="DialogMessageDeleteItem">Soll der Eintrag jetzt gelöscht werden?</string>
    <string name="ButtonCancel">Abbrechen</string>
    <string name="ButtonDelete">Löschen</string>
    <string name="MenuExport">Export</string>
    <string name="DialogTitleExport">Export</string>
    <string name="DialogMessageExport">Daten werden als CSV-Datei exportiert.</string>
    <string name="ExportNotificationTitle">CSV Export</string>
    <string name="ExportNotificationMessage">Daten weren als CSV-Datei exportiert</string>
    <string name="ExportNotificationChannel">CSV Export</string>
    <string name="ExportNotificationChannelDescription">Export der Daten als CSV-Datei</string>
    <string name="ExportNotificationFinischMessage">CSV Export abgeschlossen</string>
    <string name="EditDataActivityTitle">Bearbeiten</string>
    <string name="LabelPause">Pause:</string>
    <string name="LabelComment">Kommentar:</string>
    <string name="MenuItemEdit">Bearbeiten</string>
    <string name="MenuInfo">Info</string>
    <string name="InfoActivityTitle">Info</string>
</resources>
