<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/ActivityHorizontalPadding"
    android:paddingTop="@dimen/ActivityHorizontalPadding"
    android:paddingEnd="@dimen/ActivityVerticalPadding"
    android:paddingBottom="@dimen/ActivityHorizontalPadding"
    tools:context=".TimeTrackingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/LabelStartTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/StartDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LabelEndTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/EndDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/StartCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonStart" />

    <Button
        android:id="@+id/EndCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonEnd" />
</LinearLayout>

